--- a/src/main/resources/com/turo/pushy/console/main.fxml
+++ b/src/main/resources/com/turo/pushy/console/main.fxml
@@ -9,29 +9,29 @@
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="600.0" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.turo.pushy.console.PushyConsoleController">
    <children>
-      <fx:include source="compose-notification.fxml" />
+      <fx:include fx:id="composeNotification" source="compose-notification.fxml" />
       <AnchorPane VBox.vgrow="NEVER">
          <children>
-            <Button defaultButton="true" layoutX="527.0" layoutY="87.0" mnemonicParsing="false" text="Send notification" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+            <Button defaultButton="true" layoutX="527.0" layoutY="87.0" mnemonicParsing="false" onAction="#handleSendNotificationButtonAction" text="Send notification" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
          </children>
          <padding>
             <Insets right="10.0" />
          </padding>
       </AnchorPane>
-      <TableView prefHeight="200.0" prefWidth="200.0" tableMenuButtonVisible="true" VBox.vgrow="ALWAYS">
+      <TableView fx:id="notificationResultTableView" prefHeight="200.0" prefWidth="200.0" tableMenuButtonVisible="true" VBox.vgrow="ALWAYS">
         <columns>
-          <TableColumn prefWidth="75.0" text="Notification">
+          <TableColumn prefWidth="-1.0" text="Notification">
                <columns>
-                  <TableColumn prefWidth="75.0" text="Topic" />
-                  <TableColumn prefWidth="75.0" text="Device token" />
-                  <TableColumn prefWidth="75.0" text="Payload" />
-                  <TableColumn prefWidth="75.0" text="Priority" />
+                  <TableColumn fx:id="notificationResultTopicColumn" editable="false" prefWidth="100.0" sortable="false" text="Topic" />
+                  <TableColumn fx:id="notificationResultTokenColumn" editable="false" prefWidth="100.0" sortable="false" text="Device token" />
+                  <TableColumn fx:id="notificationResultPayloadColumn" editable="false" prefWidth="100.0" sortable="false" text="Payload" />
+                  <TableColumn fx:id="notificationResultPriorityColumn" editable="false" prefWidth="100.0" sortable="false" text="Priority" />
                </columns></TableColumn>
-          <TableColumn prefWidth="75.0" text="Response">
+          <TableColumn prefWidth="-1.0" text="Response">
                <columns>
-                  <TableColumn prefWidth="75.0" text="Status" />
-                  <TableColumn prefWidth="75.0" text="Details" />
-                  <TableColumn prefWidth="75.0" text="APNs ID" />
+                  <TableColumn fx:id="notificationResultStatusColumn" editable="false" prefWidth="100.0" sortable="false" text="Status" />
+                  <TableColumn fx:id="notificationResultDetailsColumn" editable="false" prefWidth="100.0" sortable="false" text="Details" />
+                  <TableColumn fx:id="notificationResultApnsIdColumn" editable="false" prefWidth="300.0" sortable="false" text="APNs ID" />
                </columns></TableColumn>
         </columns>
       </TableView>
