Remember recent payloads.

--- a/src/main/resources/com/turo/pushy/console/compose-notification.fxml
+++ b/src/main/resources/com/turo/pushy/console/compose-notification.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -11,6 +12,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <GridPane hgap="10.0" vgap="8.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.turo.pushy.console.ComposeNotificationController">
@@ -59,12 +61,20 @@
       <ComboBox fx:id="collapseIdComboBox" editable="true" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="6" />
       <Label text="%fxml.priority.label" GridPane.columnIndex="2" GridPane.rowIndex="6" />
       <ComboBox fx:id="deliveryPriorityComboBox" maxWidth="1.7976931348623157E308" GridPane.columnIndex="3" GridPane.hgrow="ALWAYS" GridPane.rowIndex="6" />
-      <Label text="%fxml.payload.label" GridPane.rowIndex="7" />
-      <TextArea fx:id="payloadTextArea" prefRowCount="6" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="7">
-         <font>
-            <Font name="Monospaced Regular" size="13.0" />
-         </font>
-      </TextArea>
+      <Label text="%fxml.payload.label" GridPane.rowIndex="7">
+         <GridPane.margin>
+            <Insets top="5.0" />
+         </GridPane.margin></Label>
+      <VBox spacing="8.0" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="7">
+         <children>
+            <MenuButton fx:id="recentPayloadsMenuButton" disable="true" mnemonicParsing="false" text="%fxml.recent-payloads.label" />
+            <TextArea fx:id="payloadTextArea" prefRowCount="6">
+               <font>
+                  <Font name="Monospaced Regular" size="13.0" />
+               </font>
+            </TextArea>
+         </children>
+      </VBox>
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
