--- a/src/main/resources/com/turo/pushy/console/compose-notification.fxml
+++ b/src/main/resources/com/turo/pushy/console/compose-notification.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.text.Font?>
 
 <!--
-  ~ Copyright (c) 2018 Turo
+  ~ Copyright (c) 2018 Turo Inc.
   ~
   ~ Permission is hereby granted, free of charge, to any person obtaining a copy
   ~ of this software and associated documentation files (the "Software"), to deal
